Changes in afex Version 1.3-x (2023-04-18)

Significant User Visible Changes and New Features
 o  Nicer warning if there is missing data for ANOVA models.
 o  Removed all_fit() function. mixed(..., all_fit = TRUE) now uses lme4::allFit(). In case you have relied on all_fit() use lme4::allFit().

Bugfixes
 o  Updates to documentation in various places.
 o  Using vdiffr for unit tests of afex_plot
 

Changes in afex Version 1.2-x (2022-10-30)

Significant User Visible Changes and New Features
 o   Multiple geoms for data in the background can now be passed to afex_plot() as a list. Likewise, for each geom, a separate list of additional arguments can be passed as a list of lists to data_arg.
 o   afex_plot() gets a new argument, data_color with default "darkgrey". Like data_alpha for alpha, data_color sets the colour for the geom (or now geoms) used to plot the data in the background. 
 o   Both data_color and data_alpha can now be set to NULL, in which case they will not be set but should be set by the user through data_arg.

Bugfixes
 o   Data in mixed() output is shown nicer (#113)
 o   afex_plot() should now work with factor_levels arguments even if corresponding variable is not a factor in the data.
 o   Resaved plots for new version of ggbeeswarm (#117).

Changes in afex Version 1.1-x (2022-03-30)

Significant User Visible Changes and New Features
 o   Fitting messages for mixed() are now only shown per default in interactive mode, thanks to Marius Barth (#111).
 o   Nicer error message about missing variables for ANOVAs.
 o   Removed check_contrasts() argument for ANOVAs, which did not work as described for designs with repeated-measures factors: https://github.com/singmann/afex/issues/109

Bugfixes
 o   Fixed overzealous data completeness check introduced in version 1.0 in aov_car() which prevented ANOVAs with additive factors and no cross over data from working.