@@ -19,14 +19,11 @@ S3method(summary,afex_aov)
 S3method(summary,mixed)
 export(afex_options)
 export(afex_plot)
-export(aov.car)
-export(aov4)
 export(aov_4)
 export(aov_car)
 export(aov_ez)
 export(compare.2.vectors)
 export(ems)
-export(ez.glm)
 export(interaction_plot)
 export(lmer)
 export(lmer_alt)
