@@ -1,20 +1,11 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/deprecated.R
-\name{aov.car}
-\alias{aov.car}
-\alias{afex-deprecated}
-\alias{ez.glm}
-\alias{aov4}
+\name{test_levene}
 \alias{test_levene}
+\alias{afex-deprecated}
 \alias{test_sphericity}
 \title{Deprecated functions}
 \usage{
-aov.car(...)
-
-ez.glm(...)
-
-aov4(...)
-
 test_levene(...)
 
 test_sphericity(...)
@@ -25,9 +16,6 @@ test_sphericity(...)
 }
 \description{
 These functions have been renamed or moved and deprecated in \pkg{afex}:
-\code{aov.car()} (use \code{\link{aov_car}()}), 
-\code{ez.glm()} (use \code{\link{aov_ez}()}),
-\code{aov4()} (use \code{\link{aov_4}()}),
 \code{test_levene()} (use \code{\link[performance]{check_homogeneity}()}),
 \code{test_sphericity()} (use \code{\link[performance]{check_sphericity}()}).
 }
